--- a/style.css
+++ b/style.css
@@ -3,15 +3,27 @@ body {
 }
 
 h1 {
+  color: black;
+}
 
+h2{
+  color: rgb(1, 1, 170);
+  font-size: 40px;
 }
 
 p {
-
+  color: white;
+  background-color: rgb(1, 1, 170);
+  font-size: 18px;
 }
 
 a {
   color: white;
+}
+
+li {
+  color: black;
+  font-size: 20px;
 }
 
 .title {
@@ -19,6 +31,6 @@ a {
 }
 
 .navigation{
-  padding: 10px 80px;
+  padding: 10px 25px;
   background-color: black;
 }
